# learningC

./: c_bad_practices_examples.c  c_mem_examples.c  c_quiz.c  common_interview_examples.cpp  cpp_quiz.cpp  pointers_vs_references.cpp
PDA/: CMakeLists.txt  Note.cpp  Note.h  PDA.cpp  PDA.h  Storage.cpp  Storage.h  Task.cpp  Task.h  main.cpp  ptrQuiz.cpp  ptrQuiz_v2.cpp  quiz.cpp
assembly/: README.md  assembly_basics_tutorial.s  assembly_similarity_demo.s  file_types_demo.s  learn_with_objdump  learn_with_objdump.c  simple_hello.s
assembly/esp32/: esp32_minimal_app.c
assembly/exercises/: arm64_instruction_guide.md  big_function  big_function.c  for.c  for_executable  if.c  if_executable  instruction_practice.md  learn_with_objdump.c  main_function_assembly.s
assembly/reference/: arm64_function_template.md  reading_assembly_strategy.md  register_demo.c  stack_and_registers_explained.md
c_basics/: Makefile  README.md  command_protocol.c  command_protocol.h  gps_moduel.c  gps_moduel.h  main.c  rudder_control.c  rudder_control.h  sensor_module.c  sensor_module.h
c_remake/: rudder_control_remake.c  rudder_control_remake.h  sensor_moduel_remake.c  sensor_moduel_remake.h
calculator/: main.cpp
crackMe/easy/: crackme_relevant_instructions.md  first.txt
game/: GameObject.cpp  GameObject.h  item.cpp  item.h  quiz.cpp  room.cpp  room.h
game_refactored/: GameObject.cpp  GameObject.h  Item.cpp  Item.h  Room.cpp  Room.h  main.cpp
leetCode/150/: countingBits.cc  depthOfATree.cc  flights.cpp  hasDuplicate.cc  hasLoop.cc  linkedList.cpp  palindrome.cpp  validTree.cpp
(+36 files in other folders)
